--- a/requirements/base.in
+++ b/requirements/base.in
@@ -3,13 +3,13 @@
 # Workaround for https://github.com/ansible/ansible/issues/8875
  --no-binary ansible
  
-ansible==1.4.5          # GPL v3 License
-boto==2.48.0            # MIT
-ecdsa==0.13 		# MIT
+ansible          # GPL v3 License
+boto            # MIT
+ecdsa 		# MIT
 Jinja2		        # BSD
-pycrypto==2.6.1 	# public domain
-wheel==0.30.0
+pycrypto 	# public domain
+wheel
 
 # Add this here, not because it's needed here, but because
 # 1.11.0 will collide with a dependency in default.in.
-six==1.10.0
+six
