--- a/requirements/default.in
+++ b/requirements/default.in
@@ -3,39 +3,40 @@
 
 -r base.txt
 
-argparse==1.2.1 	# Python Software Foundation License
-boto3==1.4.8            # Apache 2.0
-ciso8601==1.0.3         # MIT
-edx-ccx-keys==0.2.1     # AGPL
-edx-opaque-keys==0.4    # AGPL
-elasticsearch==1.7.0    # Apache
-filechunkio==1.8	# MIT
-google-cloud-bigquery==0.27.0
-google-api-python-client==1.7.7
-graphitesend==0.10.0    # Apache
-gspread==3.1.0    # MIT
-html5lib==1.0b3 	# MIT
-isoweek==1.3.3		# BSD
-numpy==1.11.3 		# BSD
-paypalrestsdk==1.9.0    # Paypal SDK License
-psycopg2==2.6.2     # LGPL
-pygeoip==0.3.2 		# LGPL
-python-cjson==1.1.0	# LGPL
-python-dateutil==2.6.1 	# BSD
+argparse 	# Python Software Foundation License
+boto3            # Apache 2.0
+ciso8601         # MIT
+edx-ccx-keys     # AGPL
+edx-opaque-keys    # AGPL
+elasticsearch    # Apache
+filechunkio	# MIT
+google-cloud-bigquery
+google-api-python-client
+graphitesend    # Apache
+gspread    # MIT
+html5lib 	# MIT
+isoweek		# BSD
+numpy 		# BSD
+paypalrestsdk    # Paypal SDK License
+psycopg2     # LGPL
+pygeoip 		# LGPL
+python-cjson	# LGPL
+python-dateutil 	# BSD
 # There seems to be an issue(see: https://pagure.io/python-daemon/issue/18) with dependency installation on the
 # latest version of python-daemon(2.2.0), so we pin it to an earlier version.
-python-daemon==2.1.2
-python-gnupg==0.3.9	# BSD
-pytz==2017.3		# ZPL
-requests==2.18.4        # Apache 2.0
-six==1.10.0		# MIT
-stevedore==1.19.1 	# Apache 2.0
-ua-parser==0.3.6 	# Apache
-urllib3==1.22           # MIT
-user-agents==0.3.2	# MIT
-vertica-python==0.6.11  # MIT
-yarn-api-client==0.2.3  # BSD
-snowflake-connector-python==2.0.2
+python-daemon
+python-gnupg	# BSD
+pytz		# ZPL
+paramiko
+requests        # Apache 2.0
+six		# MIT
+stevedore 	# Apache 2.0
+ua-parser 	# Apache
+urllib3           # MIT
+user-agents	# MIT
+vertica-python  # MIT
+yarn-api-client  # BSD
+snowflake-connector-python
 
 -e git+https://github.com/edx/luigi.git@eb45bcc52243de11b2b16a81229ac584fe1e601b#egg=luigi # Apache License 2.0
 
