--- a/requirements/test.in
+++ b/requirements/test.in
@@ -7,15 +7,15 @@
 
 # Stuff for tests
 
-coverage==4.3.1
-ddt==1.1.1
-diff-cover >= 0.2.1
-freezegun==0.3.9
-httpretty==0.8.14
-mock==2.0.0
-nose-ignore-docstring==0.2
-nose==1.3.7
-pandas==0.13.0
+coverage
+ddt
+diff-cover
+freezegun
+httpretty
+mock
+nose-ignore-docstring
+nose
+pandas
 
 # Stuff for development
 # edx-lint
@@ -23,7 +23,7 @@ pandas==0.13.0
 
 # Stuff for quality
 
-isort==4.2.15
-pycodestyle==2.3.1
-pylint==1.6.4
+isort
+pycodestyle
+pylint
 
